[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livepeer-mcp-server"
version = "0.1.0"
description = "MCP server exposing the Livepeer network (capabilities, discovery, jobs) powered by PymtHouse device-code auth."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PymtHouse" }]
keywords = ["mcp", "livepeer", "pymthouse", "ai", "model-context-protocol"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.28.0",
    # Provides OIDC device-code login flows + the gateway job client.
    # Not yet on PyPI; installed straight from the org repo.
    "livepeer-gateway-client @ git+https://github.com/pymthouse/livepeer-gateway-client.git",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
livepeer-mcp = "livepeer_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["livepeer_mcp"]

[tool.hatch.metadata]
# Required to allow the direct git reference dependency above.
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
